# XYRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  main.cpp
assets/models/: Kong.fbx  capsule.mtl  plane.fbx  plane.mtl
cmake/: ShaderCompile.cmake
include/: logger_macros.h  macros.h
include/core/: singleton_decorator.h  singleton_template.h  threadpool.h
include/core/logger/: Logger.h  logger_macros.h
include/core/math/: Matrix3x3.h  Matrix4x4.h  Vector2.h  Vector3.h  Vector4.h  common.h  math.h
include/core/window/: glfw_window.h
include/graphic/vulkan/: vulkan_buffer.h  vulkan_context.h  vulkan_datadefine.h  vulkan_manager.h  vulkan_renderpass.h  vulkan_subpass.h  vulkan_utils.h
include/input/: input_system.h
include/logger/: Logger.h  logger.h  logger_macros.h
include/math/: Common.h  Math.h  Matrix3x3.h  Matrix4x4.h  Vector2.h  Vector3.h  Vector4.h
include/render/: MainCameraRender.h  RenderBase.h  common_define.h  defer_render.h  forward_render.h  main_camera_render.h  render.h  render_base.h  shadow.h
include/render/renderpass/: MainCameraRenderPass.h  direction_light_shadow_pass.h  directional_light_shadow_pass.h  main_camera_defer_pass.h  main_camera_forward_pass.h  main_camera_pass.h  main_camera_renderpass.h  renderpass_base.h  ui_overlay_pass.h  ui_overlay_renderpass.h
include/render/resource/: render_buffer.h  render_common.h  render_mesh.h  render_resource.h  render_ubo.h  (+2 more)
include/scene/: Camera.h  LightBase.h  camera.h  direction_light.h  model.h  scene_manager.h  transform.h
include/surface/: surface.h  window.h
include/ui/: ui_overlay.h
include/vulkan/: vulkan_context.h  vulkan_manager.h  vulkan_renderpass.h  vulkan_subpass.h  vulkan_utils.h
include/window/: Window.h  glfw_window.h
shaders/: CMakeLists.txt  combine_ui.frag  defer_lighting.frag  directional_light_shadow.frag  full_screen.vert  mesh.frag  mesh.vert  mesh_directional_light_shadow.frag  mesh_directional_light_shadow.vert  mesh_forward.frag  mesh_forward.vert  mesh_gbuffer.frag  mesh_gbuffer.vert  skybox.frag  skybox.vert
shaders/mesh_light/: mesh_light_tangent_space.frag  mesh_light_tangent_space.vert
source/: CMakeLists.txt
source/core/graphic/vulkan/: buffer.cpp  utils.cpp
source/core/graphic/vulkan/context/: context_init.cpp  context_swapchain.cpp  context_utils.cpp
source/core/logger/: logger.cpp
source/core/math/: math_common.cpp
source/core/window/: glfw_window.cpp
source/graphic/vulkan/: buffer.cpp  common.cpp  subpass.cpp  utils.cpp
source/graphic/vulkan/context/: context_init.cpp  context_swapchain.cpp  context_utils.cpp
source/graphic/vulkan/manager/: manager_init.cpp  manager_swapchain.cpp
source/input/: input_system.cpp
source/logger/: logger.cpp
source/math/: Common.cpp
source/render/: MainCameraRender.cpp  RenderBase.cpp  defer_render.cpp  forward_render.cpp  main_camera_render.cpp  render.cpp  render_base.cpp  shadow.cpp
source/render/renderpass/: MainCameraRenderPass.cpp  direction_light_shadow_pass.cpp  directional_light_shadow_pass.cpp  main_camera_defer_pass.cpp  main_camera_forward_pass.cpp  main_camera_pass.cpp  main_camera_renderpass.cpp  ui_overlay_pass.cpp  ui_overlay_renderpass.cpp
source/render/resource/: render_buffer.cpp  render_mesh.cpp  render_resource.cpp  render_texture.cpp
source/render/subpass/: combine_ui.cpp  combine_ui_pass.cpp  defer_light.cpp  directional_light_shadow.cpp  mesh.cpp  mesh_defer_light.cpp  mesh_forward.cpp  mesh_forward_light.cpp  mesh_gbuffer.cpp  mesh_pass.cpp  skybox.cpp  skybox_pass.cpp  ui.cpp  ui_pass.cpp
source/render/vulkan/: utils.cpp
source/render/vulkan/context/: context_init.cpp  context_utils.cpp
source/render/vulkan/manager/: manager_draw.cpp  manager_init.cpp  manager_swapchain.cpp
source/scene/: Camera.cpp  LightBase.cpp  camera.cpp  direction_light.cpp  model.cpp  scene_manager.cpp
source/surface/: surface.cpp
source/ui/: ui_overlay.cpp
source/vulkan/: utils.cpp
source/vulkan/context/: context_init.cpp  context_utils.cpp
source/vulkan/manager/: manager_draw.cpp  manager_init.cpp  manager_swapchain.cpp
source/window/: glfw_window.cpp  window.cpp
(+20 files in other folders)
